--- a/css/main.css
+++ b/css/main.css
@@ -94,7 +94,7 @@ video {
   width: 90px;
   margin: 0 auto;
   padding: 0px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
@@ -112,7 +112,7 @@ ul {
 }
 
 li {
-  display: inline-flex;
+  display: flex;
   flex: 1 0 auto;
 }
 
