--- a/css/main.css
+++ b/css/main.css
@@ -94,12 +94,12 @@ video {
   width: 90px;
   margin: 0 auto;
   padding: 0px;
-  font-family: Helvetica, sans-serif;
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
   font-size: 1.1em;
-  color: gray;
+  color: white;
 }
 
 a:hover {
@@ -112,7 +112,7 @@ ul {
 }
 
 li {
-  display: flex;
+  display: inline-flex;
   flex: 1 0 auto;
 }
 
@@ -394,11 +394,11 @@ li {
 }
 
 .cover-section--light .action-link:before {
-  background-image: url("../img/arrow--light.svg");
+  background-image: url("../img/hero-carousel-organism.jpg");
 }
 
 .cover-section--hero {
-  background: var(--yellow);
+  background: var(--black);
   /* allow next cover to show a little, implying that
 	the user can scroll down */
   height: calc(100vh - 3rem);
@@ -406,13 +406,13 @@ li {
 .cover-section--hero .cover-section__feature-media {
   font-family: var(--font-sans-serif);
   font-weight: 500;
-  font-size: 6vmin;
+  font-size: 3vmin;
   line-height: 1.2;
-  color: var(--black);
-  padding: 2rem;
+  color: var(--white);
+  padding: 4rem;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: flex-end;
+  
 }
 
 /**
@@ -603,12 +603,7 @@ body {
   width: 100%;
   line-height: 1;
 }
-
-/*---------------header------------*/
-
-
-
-/*--------------captions----------*/
+/*--------------captions--------
 
 .caption {
 	position: relative;
@@ -627,22 +622,32 @@ body {
 .caption .popo {
     background: rgba(5, 5, 5, 0.433);
 }
+--*/
 /*------------- grid ------------*/
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-auto-rows: 100px;
+
 }
 
 .box1 {
+  background-color:#cc3333;
+  color: var(--white);
   grid-column-start: 1;
-  grid-column-end: 4;
   grid-row-start: 1;
   grid-row-end: 3;
+  gap: 1rem;
+  padding: 10px;
+  margin: 10px;
 }
-
-.box2 {
-  grid-column-start: 1;
-  grid-row-start: 3;
-  grid-row-end: 5;
+.box2,
+.box3,
+.box4,
+.box5 {
+  background-color:#cc3333; 
+  color: var(--white); 
+  gap: 1rem;
+  padding: 10px;
+  margin: 10px;
 }
