--- a/css/main.css
+++ b/css/main.css
@@ -70,9 +70,12 @@ video {
 }
 
 /*---------------header------------*/
-
-.hero {
-
+.home-page__header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 0;
+  width: 100%;
 }
 
 .header {
@@ -85,6 +88,25 @@ video {
 
 .header-logo {
   margin: 0 auto;
+}
+
+.header_nav {
+  position: fixed;
+  top: 0;
+  right: 270px;
+  z-index: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100px;
+  margin: 10 auto;
+  padding: 0px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 500;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: .35em;
+  color: white;
 }
 
 .header_nav a {
@@ -397,7 +419,10 @@ li {
 }
 
 .cover-section--hero {
-  background: var(--black);
+  display: grid;
+  height: fit-content;
+  align-self: stretch;
+  margin: 0 0 100px 0;
   /* allow next cover to show a little, implying that
 	the user can scroll down */
   height: calc(100vh - 3rem);
@@ -408,7 +433,6 @@ li {
   font-size: 3vmin;
   line-height: 1.2;
   color: var(--white);
-  padding: 4rem;
   display: flex;
   align-items: flex-end;
   
@@ -456,18 +480,40 @@ li {
   }
 }
 
-/**
-* .social-list
-*/
+/**----------social-list------------**/
+.copyright__container {
+  display: flex;
+  justify-content: space-between;
+  margin: 0px auto;
+  color: darkgray;
+  font-family: var(--font-sans-serif);
+  font-size: 1em;
+  padding: 10px;
+  text-decoration: none;
+}
+.copyright__container a {
+  display: inline-block;
+  justify-content: space-between;
+  color: darkgray;
+  font-family: var(--font-sans-serif);
+  font-size: 1em;
+  text-decoration: none;
+  padding: 0 0 0 100px;
+}
+.social-list__container {
+  display: inline-block;
+  align-content: flex-end;
+  align-items: flex-end;
+}
 .social-list {
   margin: 10px auto;
   padding: 10px;
   display: flex;
   list-style: none;
-  justify-content: flex-start;
+  justify-content: flex-end;
 }
 .social-list > * {
-  margin-right: 0.25rem;
+  margin-right: 0.1rem;
 }
 .social-list > :last-child {
   margin-right: 0;
@@ -475,10 +521,19 @@ li {
 .social-list a {
   color: darkgray;
   font-family: var(--font-sans-serif);
-  font-size: 1.2em;
-  padding: 10px;
+  font-size: 1em;
   text-decoration: none;
-
+}
+.legal-item a {
+  display: inline-block;
+  align-content: flex-end;
+  align-items: flex-end;
+  justify-content: space-between;
+  color: darkgray;
+  font-family: var(--font-sans-serif);
+  font-size: 1em;
+  text-decoration: none;
+  margin: 0 0 0 73px;
 }
 
 /**
@@ -623,12 +678,19 @@ body {
 }
 
 /*------------- grid ------------*/
+.portfolio-container {
+  display: inline-block;
+  margin: 0 auto;
+  padding: 0px;
+}
+.wrapper-container {
+  margin: 0 auto;
+  padding: 60px;
+}
 .wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-auto-rows: 100px;
-  margin: 0 auto;
-  padding: 60px;
+  grid-auto-rows: 10px;
 
 }
 
@@ -641,13 +703,26 @@ body {
   gap: 1rem;
   margin: 0px 10px 0px 0px;
   padding: 0px;
+  align-self: stretch;
+}
+.box1-right{
+  background-color:white;
+  color: var(--white);
+  grid-column-start: 3;
+  grid-row-start: 1;
+  grid-row-end: 5;
+  gap: 1rem;
+  margin: 0px 10px 0px 0px;
+  padding: 0px;
+  align-self: stretch;
 }
 .box2,
 .box3,
 .box4,
-.box5 {
-  background-color:#cc3333; 
-  color: var(--white); 
+.box5 { 
+  color: var(--red); 
+  grid-column-start: 2;
+  grid-row-start: 1;
+  grid-row-end: 5;
   gap: 1rem;
-  margin: 0px 10px 20px 10px;
 }
